Fix alignment.

--- a/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
+++ b/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
@@ -1441,7 +1441,7 @@ img.ProjectImage {
         overflow: hidden;
     }
     img.image-inline {
-        vertical-align: initial;
+        vertical-align: top;
     }
 	@media (max-width: @plone-grid-float-breakpoint-max) {
         a img.image-inline {
